--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "email": "souravlayek11@gmail.com",
     "url": "https://souravlayek.com"
   },
-  "license": "ISC",
+  "repository": {
+    "url": "https://github.com/souravlayek/create-souravs-next-app"
+  },
+  "keywords": [
+    "create-souravs-next-app",
+    "create-souravs-next-app-cli",
+    "nextjs boilerplate generator",
+    "nextjs boilerplate",
+    "souravlayek"
+  ],
+  "license": "GPL-3.0",
   "dependencies": {
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "cli-spinners": "^2.6.1",
-    "commander": "^9.2.0",
-    "envinfo": "^7.8.1",
     "inquirer": "^8.2.4",
     "process": "^0.11.10",
     "readline": "^1.3.0"
@@ -28,8 +36,5 @@
       "node_modules",
       "template"
     ]
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.34"
   }
 }
